--- a/back/package.json
+++ b/back/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.15",
     "oracledb": "^5.3.0",
     "sequelize-oracle": "^3.3.2-0.0"
